# ising-rs

./: .gitignore  Cargo.toml  LICENSE-MIT
src/: lib.rs  main.rs
www/: index.html  index.js  ising.css  package-lock.json  package.json
