[package]
name = "ising-rs"
version = "0.1.0"
edition = "2018"
authors = ["Alessandro Angioi"]
license = "MIT/Apache-2.0"
repository = "https://github.com/xalelax/ising-rs"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }